--- a/notebooks/Transformer_Experimental.ipynb
+++ b/notebooks/Transformer_Experimental.ipynb
@@ -877,10 +877,120 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "36a2e207-8e45-4ee6-b576-151a353f0d49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "Notes:\n",
+    "- Can't really use mean values to substitute for NaN values since the values have increased probability of being unhealthy since the test was ordered by a doctor\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e4ae16fb-617a-4c9e-9dd6-61032fd35f9a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import sys\n",
+    "import random\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from scipy.linalg import toeplitz\n",
+    "from copy import copy\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# Geniuses that worked on hypertools did not update certain package and thus it produces warnings (they break jupyter lab)\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
+    "# Comment out if you don't want to see all of the values being printed (i.e. default)\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\"\n",
+    "\n",
+    "current_dir = os.getcwd()\n",
+    "# utils_path = os.path.join(current_dir, '..', 'utils')\n",
+    "utils_path = os.path.join(current_dir, '../')\n",
+    "utils_abs_path = os.path.abspath(utils_path)\n",
+    "if utils_abs_path not in sys.path:\n",
+    "    sys.path.append(utils_abs_path)\n",
+    "\n",
+    "import utils.get_data as get_data\n",
+    "# from impute_methods import *\n",
+    "from utils.impute_methods import impute_linear_interpolation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "f0a5b6bb-2a3f-4b9b-a8b5-2ab8cb003021",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class TimeSeriesTransformer(nn.Module):\n",
+    "    def __init__(self, num_features, num_blocks=1, d_model=64, nhead=4, dim_feedforward=256, dropout=0.1):\n",
+    "        super(TimeSeriesTransformer, self).__init__()\n",
+    "        self.embedding = nn.Linear(num_features, d_model)\n",
+    "        encoder_layer = nn.TransformerEncoderLayer(d_model=d_model, nhead=nhead, \n",
+    "                                                   dim_feedforward=dim_feedforward, dropout=dropout)\n",
+    "        self.transformer_encoder = nn.TransformerEncoder(encoder_layer, num_layers=num_blocks)\n",
+    "        self.output_layer = nn.Linear(d_model, 1)  # Outputting a probability for each time step\n",
+    "\n",
+    "    def forward(self, src):\n",
+    "        src = self.embedding(src)  # (Batch, Seq, Features) -> (Batch, Seq, d_model)\n",
+    "        output = self.transformer_encoder(src)\n",
+    "        output = self.output_layer(output)\n",
+    "        return torch.sigmoid(output)  # Apply sigmoid to get probabilities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef9f7a6c-d1cc-4881-92f4-a98735ae346e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset, patient_id_map = get_data.get_dataset()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ed3c4aa-0123-480c-b5e1-a7d7bd860166",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First lets experiment with only raw data \n",
+    "# We have to however impute NaN values since Neural Networks can't (natively) handle them\n",
+    "\n",
+    "columns_to_linearly_interpolate = [\n",
+    "    'HR', 'O2Sat', 'SBP', 'MAP', 'DBP', 'Resp'\n",
+    "]\n",
+    "\n",
+    "# Feel free to omit this (EXPERIMENTAL)\n",
+    "# Normilize the dataset\n",
+    "if True:\n",
+    "    for col in \n",
+    "    for patient_id in set(multiindex_df.index.get_level_values(0)):\n",
+    "        patient_data = multiindex_df.loc[patient_id]\n",
+    "\n",
+    "    \n",
+    "# Linear Interpolation\n",
+    "print(\"Linearly interpolating:\")\n",
+    "for col in columns_to_linearly_interpolate:\n",
+    "    dataset = impute_linear_interpolation(dataset, col)\n",
+    "    print(col)\n",
+    "print(\"Done\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
