--- a/notebooks/Unofficial_First_Experimental.ipynb
+++ b/notebooks/Unofficial_First_Experimental.ipynb
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "351eed85-950a-4d40-a7aa-a98480c847c5",
    "metadata": {},
    "outputs": [
@@ -777,7 +777,90 @@
      "output_type": "stream",
      "text": [
       "Hyperparameter optimization\n",
-      "  5%|██▏                                         | 1/20 [00:57<18:11, 57.47s/trial, best loss: 0.07916181606519213]"
+      "100%|███████████████████████████████████████████| 20/20 [05:29<00:00, 16.47s/trial, best loss: 0.06689352556640105]\n",
+      "training dataset AUC: 0.9623504792828161\n",
+      "training dataset acc: 0.8971253302288094 using threshold of 0.5\n",
+      "validation dataset AUC: 0.9177146977481868\n",
+      "validation dataset acc: 0.8442733052744694 using thresholld of 0.1\n",
+      "Using following parameters:\n",
+      "            max_depth : 11\n",
+      "            eta (learning rate) : 0.04\n",
+      "            n_estimators : 100\n",
+      "            subsample : 0.8\n",
+      "            colsample_bytree : 0.8\n",
+      "            reg_alpha : 0.05\n",
+      "            reg_lambda ; 1\n",
+      "            gamma : 0\n",
+      "            min_child_weight : 20\n",
+      "            objective : 'binary:logistic'\n",
+      "Hyperparameter optimization\n",
+      "100%|███████████████████████████████████████████| 20/20 [08:01<00:00, 24.09s/trial, best loss: 0.06662487686934715]\n",
+      "training dataset AUC: 0.9999545745308993\n",
+      "training dataset acc: 0.9965521873460798 using threshold of 0.4\n",
+      "validation dataset AUC: 0.9793573948434049\n",
+      "validation dataset acc: 0.9312259335542222 using thresholld of 0.1\n",
+      "Using following parameters:\n",
+      "            max_depth : 10\n",
+      "            eta (learning rate) : 0.08\n",
+      "            n_estimators : 400\n",
+      "            subsample : 0.9\n",
+      "            colsample_bytree : 0.5\n",
+      "            reg_alpha : 0.005\n",
+      "            reg_lambda ; 1.5\n",
+      "            gamma : 0\n",
+      "            min_child_weight : 1\n",
+      "            objective : 'binary:logistic'\n",
+      "Hyperparameter optimization\n",
+      "100%|███████████████████████████████████████████| 20/20 [04:10<00:00, 12.52s/trial, best loss: 0.08175875347004569]\n",
+      "training dataset AUC: 0.999927656584423\n",
+      "training dataset acc: 0.9958581471365244 using threshold of 0.4\n",
+      "validation dataset AUC: 0.9754953787956799\n",
+      "validation dataset acc: 0.9236142204710307 using thresholld of 0.1\n",
+      "Using following parameters:\n",
+      "            max_depth : 9\n",
+      "            eta (learning rate) : 0.04\n",
+      "            n_estimators : 1000\n",
+      "            subsample : 0.8\n",
+      "            colsample_bytree : 0.7\n",
+      "            reg_alpha : 0.005\n",
+      "            reg_lambda ; 4\n",
+      "            gamma : 0.1\n",
+      "            min_child_weight : 1\n",
+      "            objective : 'binary:logistic'\n",
+      "Hyperparameter optimization\n",
+      "100%|███████████████████████████████████████████| 20/20 [05:03<00:00, 15.20s/trial, best loss: 0.06448146157979584]\n",
+      "training dataset AUC: 0.9999631444569521\n",
+      "training dataset acc: 0.9970224102805203 using threshold of 0.5\n",
+      "validation dataset AUC: 0.9798547508043021\n",
+      "validation dataset acc: 0.9319362349991044 using thresholld of 0.1\n",
+      "Using following parameters:\n",
+      "            max_depth : 10\n",
+      "            eta (learning rate) : 0.06\n",
+      "            n_estimators : 1400\n",
+      "            subsample : 0.9\n",
+      "            colsample_bytree : 0.7\n",
+      "            reg_alpha : 0.1\n",
+      "            reg_lambda ; 0.8\n",
+      "            gamma : 0\n",
+      "            min_child_weight : 5\n",
+      "            objective : 'binary:logistic'\n",
+      "Hyperparameter optimization\n",
+      "100%|███████████████████████████████████████████| 20/20 [06:10<00:00, 18.52s/trial, best loss: 0.06994447429697292]\n",
+      "training dataset AUC: 0.9994395904513771\n",
+      "training dataset acc: 0.9899254483175499 using threshold of 0.5\n",
+      "validation dataset AUC: 0.9662672673061898\n",
+      "validation dataset acc: 0.908113917248791 using thresholld of 0.1\n",
+      "Using following parameters:\n",
+      "            max_depth : 8\n",
+      "            eta (learning rate) : 0.1\n",
+      "            n_estimators : 400\n",
+      "            subsample : 0.7\n",
+      "            colsample_bytree : 0.9\n",
+      "            reg_alpha : 0.05\n",
+      "            reg_lambda ; 2\n",
+      "            gamma : 0\n",
+      "            min_child_weight : 5\n",
+      "            objective : 'binary:logistic'\n"
      ]
     }
    ],
