Started (again) working on the transformer model

--- a/notebooks/Transformer_Experimental.ipynb
+++ b/notebooks/Transformer_Experimental.ipynb
@@ -890,7 +890,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "e4ae16fb-617a-4c9e-9dd6-61032fd35f9a",
    "metadata": {},
    "outputs": [],
@@ -927,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f0a5b6bb-2a3f-4b9b-a8b5-2ab8cb003021",
    "metadata": {},
    "outputs": [],
@@ -953,20 +953,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ef9f7a6c-d1cc-4881-92f4-a98735ae346e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   20337\n",
+      "   40337\n",
+      "Dataset loaded into a MultiIndex DataFrame.\n"
+     ]
+    }
+   ],
    "source": [
     "dataset, patient_id_map = get_data.get_dataset()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "3ed3c4aa-0123-480c-b5e1-a7d7bd860166",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1391539563.py, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[5], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    for col in\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# First lets experiment with only raw data \n",
     "# We have to however impute NaN values since Neural Networks can't (natively) handle them\n",
@@ -978,7 +997,6 @@
     "# Feel free to omit this (EXPERIMENTAL)\n",
     "# Normilize the dataset\n",
     "if True:\n",
-    "    for col in \n",
     "    for patient_id in set(multiindex_df.index.get_level_values(0)):\n",
     "        patient_data = multiindex_df.loc[patient_id]\n",
     "\n",
@@ -990,6 +1008,72 @@
     "    print(col)\n",
     "print(\"Done\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd13cfc8-2791-4e47-b247-f2a0761a4e6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.optim as optim\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import roc_auc_score, accuracy_score\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "\n",
+    "# Assuming 'dataset' has been appropriately preprocessed and split\n",
+    "features = dataset.drop('SepsisLabel', axis=1).values\n",
+    "labels = dataset['SepsisLabel'].values\n",
+    "\n",
+    "# Split the data into training and validation sets\n",
+    "X_train, X_val, y_train, y_val = train_test_split(features, labels, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Convert data to PyTorch tensors\n",
+    "X_train_tensor = torch.tensor(X_train, dtype=torch.float32)\n",
+    "y_train_tensor = torch.tensor(y_train, dtype=torch.float32)\n",
+    "X_val_tensor = torch.tensor(X_val, dtype=torch.float32)\n",
+    "y_val_tensor = torch.tensor(y_val, dtype=torch.float32)\n",
+    "\n",
+    "# Create DataLoader for batch processing\n",
+    "train_data = TensorDataset(X_train_tensor, y_train_tensor)\n",
+    "train_loader = DataLoader(train_data, batch_size=64, shuffle=True)\n",
+    "val_data = TensorDataset(X_val_tensor, y_val_tensor)\n",
+    "val_loader = DataLoader(val_data, batch_size=64, shuffle=False)\n",
+    "\n",
+    "# Initialize the model\n",
+    "num_features = X_train.shape[1]\n",
+    "model = TimeSeriesTransformer(num_features)\n",
+    "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
+    "criterion = nn.BCELoss()\n",
+    "\n",
+    "# Training loop\n",
+    "num_epochs = 10\n",
+    "model.train()\n",
+    "for epoch in range(num_epochs):\n",
+    "    total_loss = 0\n",
+    "    for data, target in train_loader:\n",
+    "        optimizer.zero_grad()\n",
+    "        output = model(data)\n",
+    "        loss = criterion(output.squeeze(), target)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        total_loss += loss.item()\n",
+    "    print(f'Epoch {epoch+1}, Loss: {total_loss/len(train_loader)}')\n",
+    "\n",
+    "    # Validation step\n",
+    "    model.eval()\n",
+    "    with torch.no_grad():\n",
+    "        valid_loss = []\n",
+    "        for data, target in val_loader:\n",
+    "            output = model(data)\n",
+    "            loss = criterion(output.squeeze(), target)\n",
+    "            valid_loss.append(loss.item())\n",
+    "        print(f'Validation Loss: {np.mean(valid_loss)}')\n",
+    "\n",
+    "# Save the model\n",
+    "torch.save(model.state_dict(), 'time_series_transformer_model.pth')\n",
+    "print(\"Model saved successfully.\")"
    ]
   }
  ],
