Some model with training script, really just testing it can train

--- a/notebooks/Transformer_Experimental.ipynb
+++ b/notebooks/Transformer_Experimental.ipynb
@@ -973,16 +973,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "3ed3c4aa-0123-480c-b5e1-a7d7bd860166",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1391539563.py, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[5], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    for col in\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linearly interpolating:\n",
+      "HR\n",
+      "O2Sat\n",
+      "SBP\n",
+      "MAP\n",
+      "DBP\n",
+      "Resp\n",
+      "Done\n"
      ]
     }
    ],
@@ -997,8 +1003,19 @@
     "# Feel free to omit this (EXPERIMENTAL)\n",
     "# Normilize the dataset\n",
     "if True:\n",
-    "    for patient_id in set(multiindex_df.index.get_level_values(0)):\n",
-    "        patient_data = multiindex_df.loc[patient_id]\n",
+    "    # Check if multiindex_df is indeed a MultiIndex DataFrame\n",
+    "    if isinstance(dataset.index, pd.MultiIndex):\n",
+    "        # Normalize each patient's data\n",
+    "        # This will apply z-score normalization per patient per feature\n",
+    "        normalized_data = dataset.groupby(level=0).transform(lambda x: (x - x.mean()) / x.std())\n",
+    "    \n",
+    "        # Optionally fill NaN values if they are created by division by zero in cases where std is zero\n",
+    "        normalized_data = normalized_data.fillna(0)\n",
+    "    \n",
+    "        # If you need to replace the old DataFrame with the new, normalized one\n",
+    "        dataset.update(normalized_data)\n",
+    "    else:\n",
+    "        print(\"The dataframe does not have a MultiIndex as expected.\")\n",
     "\n",
     "    \n",
     "# Linear Interpolation\n",
@@ -1012,10 +1029,417 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "cd13cfc8-2791-4e47-b247-f2a0761a4e6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1, Loss: 0.059345569868722726\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.057677078577439284\n",
+      "Epoch 2, Loss: 0.057468115582008886\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.059384186223891904\n",
+      "Epoch 3, Loss: 0.05702876737904792\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.05713316460958484\n",
+      "Epoch 4, Loss: 0.05677124797254722\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.056915106991940655\n",
+      "Epoch 5, Loss: 0.05657149219993898\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.05645664969026824\n",
+      "Epoch 6, Loss: 0.05640621893938512\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.05653091064268208\n",
+      "Epoch 7, Loss: 0.05630581277514621\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.05667052705482515\n",
+      "Epoch 8, Loss: 0.0562075090712235\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.058105461875952426\n",
+      "Epoch 9, Loss: 0.05613973358120111\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.056228141321498656\n",
+      "Epoch 10, Loss: 0.05607333384546504\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TimeSeriesTransformer(\n",
+       "  (embedding): Linear(in_features=40, out_features=64, bias=True)\n",
+       "  (transformer_encoder): TransformerEncoder(\n",
+       "    (layers): ModuleList(\n",
+       "      (0): TransformerEncoderLayer(\n",
+       "        (self_attn): MultiheadAttention(\n",
+       "          (out_proj): NonDynamicallyQuantizableLinear(in_features=64, out_features=64, bias=True)\n",
+       "        )\n",
+       "        (linear1): Linear(in_features=64, out_features=256, bias=True)\n",
+       "        (dropout): Dropout(p=0.1, inplace=False)\n",
+       "        (linear2): Linear(in_features=256, out_features=64, bias=True)\n",
+       "        (norm1): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (norm2): LayerNorm((64,), eps=1e-05, elementwise_affine=True)\n",
+       "        (dropout1): Dropout(p=0.1, inplace=False)\n",
+       "        (dropout2): Dropout(p=0.1, inplace=False)\n",
+       "      )\n",
+       "    )\n",
+       "  )\n",
+       "  (output_layer): Linear(in_features=64, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Validation Loss: 0.05617403044568659\n",
+      "Model saved successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "import torch.optim as optim\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -1034,6 +1458,9 @@
     "y_train_tensor = torch.tensor(y_train, dtype=torch.float32)\n",
     "X_val_tensor = torch.tensor(X_val, dtype=torch.float32)\n",
     "y_val_tensor = torch.tensor(y_val, dtype=torch.float32)\n",
+    "\n",
+    "y_train_tensor = torch.tensor(y_train, dtype=torch.float32).clamp(0, 1) \n",
+    "y_val_tensor = torch.tensor(y_val, dtype=torch.float32).clamp(0, 1)\n",
     "\n",
     "# Create DataLoader for batch processing\n",
     "train_data = TensorDataset(X_train_tensor, y_train_tensor)\n",
@@ -1075,6 +1502,14 @@
     "torch.save(model.state_dict(), 'time_series_transformer_model.pth')\n",
     "print(\"Model saved successfully.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "313e229d-4b09-4ef2-8ad2-0d1cdee90e59",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
